[package]
description = "Durian"
name = "durian"
version = "0.1.0"
authors = ["Mostafa Sedaghat Joo <mostafa.sedaghat@gmail.com>"]

[dependencies]
byteorder = "1.0"
ethereum-types = "0.8.0"
parity-bytes = "0.1"

[dependencies.ethcore-miner]
git = "https://github.com/b00f/parity-ethereum.git"

[dependencies.vm]
git = "https://github.com/b00f/parity-ethereum.git"

[dependencies.machine]
git = "https://github.com/b00f/parity-ethereum.git"

[dependencies.trace]
git = "https://github.com/b00f/parity-ethereum.git"

[dependencies.wasm]
git = "https://github.com/b00f/parity-ethereum.git"

[dependencies.common-types]
git = "https://github.com/b00f/parity-ethereum.git"

[lib]
path = "src/lib.rs"

