[package]
description = "Durian"
name = "durian"
version = "0.1.0"
authors = ["Mostafa Sedaghat Joo <mostafa.sedaghat@gmail.com>"]

[dependencies]
byteorder = "1.0"
ethereum-types = "0.8.0"
parity-bytes = "0.1"
log = "0.4"
bincode = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.8.2"
hex-literal = "0.2.1"
primitive-types = "0.1.5"
parity-util-mem = "0.5.1"

[dependencies.ethcore-miner]
git = "https://github.com/b00f/parity-ethereum.git"

[dependencies.vm]
git = "https://github.com/b00f/parity-ethereum.git"

[dependencies.machine]
git = "https://github.com/b00f/parity-ethereum.git"

[dependencies.trace]
git = "https://github.com/b00f/parity-ethereum.git"

[dependencies.wasm]
git = "https://github.com/b00f/parity-ethereum.git"

[dependencies.common-types]
git = "https://github.com/b00f/parity-ethereum.git"


[lib]
path = "src/lib.rs"

