[package]
description = "Durian"
name = "durian"
version = "0.1.0"
authors = ["Mostafa Sedaghat Joo <mostafa.sedaghat@gmail.com>"]

[dependencies]
byteorder = "1.0"
ethereum-types = "0.8.0"
log = "0.4"
bincode = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.8.2"
hex-literal = "0.2.1"
primitive-types = "0.1.5"
parity-util-mem = "0.5.1"
wasmi = "0.6.2"
pwasm-utils = "0.12.0"
parity-wasm = "0.41.0"
snafu = "0.6.3"
keccak-hash = "0.4.0"

[lib]
path = "src/lib.rs"
