[package]
name = "blockchain"
version = "0.1.0"
authors = ["nagaraj <nagarajmanjunath22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.8.0"
bincode = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.8.2"
durian = { path = ".." }
simple_logger = "1.4.0"
log = "0.4"
time = { version = "0.2", features = ["std", "serde"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"]}
serde_derive = "1.0.104"
chrono = { version = "0.3", features = ["serde"] }
rustc-hex = "1.0"
tonic = "0.1"
prost = "0.6"
hex = "0.4.0"
hex-slice = "0.1.4"
bytes = "0.5.4"
hex-literal = "0.2.1"
jsonrpc-core = "14.0.5"


[features]
arbitrary_precision = ["serde_json/arbitrary_precision"]

[lib]
path = "src/lib.rs"
