[package]
name = "blockchain"
version = "0.1.0"
authors = ["nagaraj <nagarajmanjunath22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.8.0"
bincode = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.8.2"
durian = { path = ".." }
simple_logger = "1.4.0"
log = "0.4"
time = { version = "0.2", features = ["std", "serde"] }
hex-literal = "0.2.1"
jsonrpc-http-server = "14.0.5"
serde_json = "1.0.48"


[lib]
path = "src/lib.rs"
