[package]
name = "cli"
version = "0.1.0"
authors = ["Mostafa <mostafa.sedaghat@gmail.com>"]
edition = "2018"


[dependencies]
durian = { path = ".." }
simple_logger = "1.4.0"
log = "0.4"
time = { version = "0.2", features = ["std", "serde"] }
hex-literal = "0.2.1"
web3 = {path="../web3"}
blockchain = {path= "../blockchain"}
tokio-core = "0.1.6"
tokio-io = "0.1.12"
parking_lot = "0.8"
futures = "0.1"
futures-cpupool = "0.1"
rpchyper = {path="../rpchyper"}
