[package]
name = "cli"
version = "0.1.0"
authors = ["Mostafa <mostafa.sedaghat@gmail.com>"]
edition = "2018"


[dependencies]
durian = { path = ".." }
simple_logger = "1.4.0"
log = "0.4"
time = { version = "0.2", features = ["std", "serde"] }
hex-literal = "0.2.1"
web3 = {path="../web3"}
blockchain = {path= "../blockchain"}
tokio-core = "0.1.6"
tokio-io = "0.1.12"
parking_lot = "0.8"
futures = "0.1"
futures-cpupool = "0.1"
jsonrpc-http-server = "14.0.6"
base64 = "0.3.0"
httparse = "1.0"
language-tags = "0.2"
mime = "0.2"
relay = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
unicase = "1.0"
url = "1.0"
hyper = "0.13"
pretty_env_logger = "0.4.0"

[dev-dependencies]
num_cpus = "1.0"
pretty_env_logger = "0.1"


[build-dependencies]
rustc_version = "0.1"

[features]
default = []
nightly = []


