[package]
name = "rpchyper"
version = "0.1.0"
authors = ["nagaraj <nagarajmanjunath22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.2"
tokio = { version = "0.2", features = ["full"] }
blockchain = {path = "../blockchain"}
jsonrpc-core = "14.0.5"
futures = "0.3.4"
hyper-router = "^0.5"

