[package]
name = "web3"
version = "0.1.0"
authors = ["nagaraj <nagarajmanjunath22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockchain = {path = "../blockchain"}

jsonrpc-core = "14.0.5"
jsonrpc-derive = "14.0.5"
jsonrpc-http-server = "14.0.5"
jsonrpc-ws-server = "14.0.5"
jsonrpc-ipc-server = "14.0.6"
jsonrpc-pubsub = "14.0.5"

tokio = { version = "0.2", features = ["full"] }
futures = "0.3.3"
log = "0.4"
simple_logger = "1.4.0"
ethereum-types = "0.8.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rustc-hex = "1.0"
ansi_term = "0.11"
futures-util = "0.3.4"

