[package]
name = "grpc"
version = "0.1.0"
authors = ["nagaraj <nagarajmanjunath22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tonic = "0.2"
prost = "0.6"
ethereum-types = "0.8.0"
tokio = { version = "0.2", features = ["macros"] }
blockchain = { path = "../blockchain" }
durian = { path = "../.." }
bincode = "1.0"

[build-dependencies]
tonic-build = "0.2"


[[bin]] # Bin to run the HelloWorld gRPC server
name = "provider-server"
path = "src/main.rs"

